--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,6 +50,9 @@
         <a class="nav__link" href="{{ '/art.html' | relative_url }}">Art</a>
       </li>
       <li class="nav__item">
+        <a class="nav__link" href="{{ '/courses.html' | relative_url }}">Courses</a>
+      </li>
+      <li class="nav__item">
         <a class="nav__link" href="{{ '/resume.html' | relative_url }}"
           >Resume</a
         >
