Home button added

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,9 @@
 <header class="site-header">
   <div class="header__bar">
-    <a class="header__logo" href="{{ '/' | relative_url }}">SITE1101</a>
+    <a class="header__logo" href="{{ '/' | relative_url }}">
+      <span class="header__logo-icon" aria-hidden="true"><i class="fa fa-home"></i></span>
+      <span class="header__logo-text">Huseyn Huseynzada</span>
+    </a>
     <div class="header__actions">
       <button
         class="header__theme-toggle"
