snow effect and mouse hover effect added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,8 +64,11 @@ layout: null
     </script>
     <script
       defer
+      src="{{ '/assets/js/delight.js' | relative_url }}"
+    ></script>
+    <script
+      defer
       src="{{ '/assets/js/assistant.js' | relative_url }}"
     ></script>
   </body>
 </html>
-
