snow effect changed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,10 @@ layout: null
       defer
       src="{{ '/assets/js/theme-toggle.js' | relative_url }}"
     ></script>
+    <script
+      defer
+      src="{{ '/assets/js/snow.js' | relative_url }}"
+    ></script>
   </head>
   <body class="site" data-theme="light">
     <div class="site__container">
